# LLM_View_3D

./: .gitignore  README.md  pyproject.toml
scripts/: llm-view.ps1  restart.ps1  start.ps1  status.ps1  stop.ps1
src/llm_view/: __init__.py  __main__.py  app.py
src/llm_view/api/: __init__.py  routes.py
src/llm_view/core/: __init__.py  config.py  schemas.py
src/llm_view/services/: __init__.py  demo_engine.py  engine.py  flow.py  gguf_metadata.py  hardware.py  hf_engine.py  model_registry.py
src/llm_view/static/: index.html
src/llm_view/static/css/: styles.css
src/llm_view/static/js/: api.js  app.js  state.js
src/llm_view/static/js/components/: architecture3d.js  attentionHeatmap.js  flowPanel.js  hardwarePanel.js  layerInspector.js  modelMap.js  predictions.js  tokenJourney.js
