[project]
name = "llm-view"
version = "0.1.0"
description = "Interactive 3D explorer for transformer/LLM internals."
readme = "README.md"
authors = [
    { name = "Mugil S K", email = "mugilnimbus@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "numpy>=2.2.0",
    "psutil>=7.0.0",
    "pydantic>=2.11.0",
    "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
ml = [
    "accelerate>=1.7.0",
    "safetensors>=0.5.0",
    "torch>=2.7.0",
    "transformers>=4.52.0",
]

[project.scripts]
llm-view = "llm_view:main"

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"
